--- a/i18n/en.i18n.json
+++ b/i18n/en.i18n.json
@@ -140,6 +140,7 @@
     "error-json-malformed": "Your text is not valid JSON",
     "error-json-schema": "Your JSON data does not include the proper information in the correct format",
     "error-list-doesNotExist": "This list does not exist",
+    "exportAllCardsTsvPopup-title": "Export All Cards to Excel TSV",
     "filter": "Filter",
     "filter-cards": "Filter Cards",
     "filter-clear": "Clear filter",
