add: import excel csv/tsv using common import interface

--- a/i18n/en.i18n.json
+++ b/i18n/en.i18n.json
@@ -159,6 +159,8 @@
     "import-json-placeholder": "Paste your valid JSON data here",
     "import-members-map": "Your imported board has some members. Please map the members you want to import to Wekan users",
     "import-show-user-mapping": "Review members mapping",
+    "import-tsv-instruction": "In your Excel, select the data including field headers, and copy the resulting text",
+    "import-tsv-placeholder": "Paste your valid CSV/TSV data here",
     "import-user-select": "Pick the Wekan user you want to use as this member",
     "importCardFromOtherBoardPopup-title": "Select board to import cards from",
     "importCardFromOtherListPopup-title": "Select list to import cards from",
@@ -184,6 +186,7 @@
     "listArchiveCardsPopup-title": "Archive All Cards in this List?",
     "listExportCardsTsvPopup-title": "Export Cards to Excel TSV",
     "listImportCardPopup-title": "Import a Trello card",
+    "listImportCardsTsvPopup-title": "Import Excel CSV/TSV",
     "listImportRedminePopup-title": "Import Redmine CSV",
     "listMembersPopup-title": "List Members",
     "listMoveCardsPopup-title": "Move All Cards in List",
@@ -239,7 +242,7 @@
     "restore": "Restore",
     "save": "Save",
     "search": "Search",
-    "select-and-copy": "Ctrl-A, then Ctrl-C, to select CSV text and copy to clipboard",
+    "select-and-copy": "Select all text below, and copy to clipboard (Ctrl-A, then Ctrl-C)",
     "select-color": "Select a color",
     "select-mappingcsv": "Data mapping (fields, members, etc.): ",
     "select-redminecsv": "CSV data file exported from Redmine: ",
