--- a/i18n/zh-CN.i18n.json
+++ b/i18n/zh-CN.i18n.json
@@ -155,6 +155,8 @@
     "import-card": "导入 Trello 卡片",
     "import-card-trello-instruction": "进入 Trello 卡片, 选择 '共享及其它...' 然后 '导出 JSON' 并复制生成的文本",
     "import-json-placeholder": "粘贴正确的 JSON 数据",
+    "import-tsv-instruction": "在 Excel 中选中数据（包括字段名），复制到剪贴板",
+    "import-tsv-placeholder": "粘贴正确的 CSV 或 TSV 文本",
     "importCardFromOtherBoardPopup-title": "请选择卡片的导入源看板：",
     "importCardFromOtherListPopup-title": "请选择卡片的导入源清单：",
     "info": "信息",
@@ -178,8 +180,9 @@
     "listActionPopup-title": "清单菜单",
     "listArchiveCardsPopup-title": "删除该清单中的所有卡片？",
     "listImportCardPopup-title": "导入 Trello 卡片",
+    "listImportCardsTsvPopup-title": "导入 Excel TSV",
     "listImportRedminePopup-title": "导入 Redmine CSV 文件",
-    "listExportCardsTsvPopup-title": "导出卡片到 Excel TSV 格式",
+    "listExportCardsTsvPopup-title": "导出卡片到 Excel TSV",
     "listMembersPopup-title": "清单小组成员",
     "listMoveCardsPopup-title": "移动该清单的所有卡片",
     "listSettingsPopup-title": "清单属性设置",
@@ -231,7 +234,7 @@
     "restore": "恢复",
     "save": "保存",
     "search": "搜索",
-    "select-and-copy": "Ctrl-A, 再 Ctrl-C, 选中全部文本并复制到剪贴板",
+    "select-and-copy": "选中下面的全部文本，并复制到剪贴板（Ctrl-A 再 Ctrl-C）",
     "select-color": "选择颜色",
     "select-mappingcsv": "数据映射 (字段、成员, 等等): ",
     "select-redminecsv": "从 Redmine 导出的 CSV 文件: ",
