add: invite new user to board via email

--- a/i18n/zh-CN.i18n.json
+++ b/i18n/zh-CN.i18n.json
@@ -133,11 +133,27 @@
     "edit-profile": "更改档案",
     "editLabelPopup-title": "更改标签",
     "editProfilePopup-title": "更改档案",
-    "email": "邮箱",
-    "error-board-notAMember": "需要该板的成员权限才行",
+    "email": "Email",
+    "email-enrollAccount-subject": "已为您在 __url__ 创建一个账号",
+    "email-enrollAccount-text": "__user__ 您好，\n\n点击下面的链接访问网站，现在就开始使用该服务。\n\n__url__\n\n谢谢。\n",
+    "email-fail": "Email 发送失败",
+    "email-invalid": "Email 地址错误",
+    "email-invite": "发送邀请",
+    "email-invite-subject": "__inviter__ 向您发出邀请",
+    "email-invite-text": "尊敬的 __user__，\n\n__inviter__ 邀请您加入看板 \"__board__\"。\n\n请点击下面的链接，访问看板并参与协作：\n\n__url__\n\n谢谢。\n",
+    "email-resetPassword-subject": "重置您在 __url__ 的密码",
+    "email-resetPassword-text": "__user__您好,\n\n点击下面的链接，即可重置您的密码。\n\n__url__\n\n谢谢。\n",
+    "email-sent": "邀请已发送",
+    "email-verifyEmail-subject": "在 __url__ 验证您的 Email 地址",
+    "email-verifyEmail-text": "__user__ 您好，\n\n点击下面的链接，即可验证您的 Email 地址。\n\n__url__\n\n谢谢。\n",
+    "error-board-notAdmin": "您需要该看板的管理员权限",
+    "error-board-notAMember": "您需要该看板的成员权限",
     "error-json-malformed": "您的文本不是正确的 JSON",
     "error-json-schema": "您的 JSON 不包含必要的正确格式信息",
     "error-list-doesNotExist": "该清单不存在",
+    "error-user-doesNotExist": "该用户不存在",
+    "error-user-notAllowSelf": "不能对自己操作",
+    "error-user-notCreated": "该用户创建失败，可能存在同名用户",
     "exportAllCardsTsvPopup-title": "将所有卡片导出 Excel TSV",
     "filter": "过滤",
     "filter-cards": "过滤卡片",
