--- a/i18n/en.i18n.json
+++ b/i18n/en.i18n.json
@@ -136,10 +136,26 @@
     "editLabelPopup-title": "Change Label",
     "editProfilePopup-title": "Edit Profile",
     "email": "Email",
+    "email-enrollAccount-subject": "An account created for you on __url__",
+    "email-enrollAccount-text": "Hello __user__,\n\nTo start using the service, simply click the link below.\n\n__url__\n\nThanks.\n",
+    "email-fail": "Sending email failed",
+    "email-invalid": "Invalid email",
+    "email-invite": "Invite via Email",
+    "email-invite-subject": "__inviter__ sent you an invitation",
+    "email-invite-text": "Dear __user__,\n\n__inviter__ invites you to join board \"__board__\" for collaborations.\n\nPlease follow the link below:\n\n__url__\n\nThanks.\n",
+    "email-resetPassword-subject": "Reset your password on __url__",
+    "email-resetPassword-text": "Hello __user__,\n\nTo reset your password, simply click the link below.\n\n__url__\n\nThanks.\n",
+    "email-sent": "Email sent",
+    "email-verifyEmail-subject": "Verify email address on __url__",
+    "email-verifyEmail-text": "Hello __user__,\n\nTo verify your account email, simply click the link below.\n\n__url__\n\nThanks.\n",
+    "error-board-notAdmin": "You need to be admin of this board to do that",
     "error-board-notAMember": "You need to be a member of this board to do that",
     "error-json-malformed": "Your text is not valid JSON",
     "error-json-schema": "Your JSON data does not include the proper information in the correct format",
     "error-list-doesNotExist": "This list does not exist",
+    "error-user-doesNotExist": "This user does not exist",
+    "error-user-notAllowSelf": "This action on self is not allowed",
+    "error-user-notCreated": "This user is not created",
     "exportAllCardsTsvPopup-title": "Export All Cards to Excel TSV",
     "filter": "Filter",
     "filter-cards": "Filter Cards",
