add: invite user via email, invited user can accept or decline

--- a/i18n/zh-CN.i18n.json
+++ b/i18n/zh-CN.i18n.json
@@ -1,4 +1,5 @@
 {
+    "accept": "接受邀请",
     "actions": "动作",
     "activities": "活动",
     "activity": "活动",
@@ -116,6 +117,7 @@
     "createBoardPopup-title": "创建看板",
     "createLabelPopup-title": "创建标签",
     "current": "当前的",
+    "decline": "拒绝邀请",
     "default-avatar": "默认头像",
     "define-list-status": "定义清单的状态",
     "delete": "删除",
@@ -146,6 +148,7 @@
     "email-sent": "邀请已发送",
     "email-verifyEmail-subject": "在 __url__ 验证您的 Email 地址",
     "email-verifyEmail-text": "__user__ 您好，\n\n点击下面的链接，即可验证您的 Email 地址。\n\n__url__\n\n谢谢。\n",
+    "error-board-doesNotExist": "该看板不存在",
     "error-board-notAdmin": "您需要该看板的管理员权限",
     "error-board-notAMember": "您需要该看板的成员权限",
     "error-json-malformed": "您的文本不是正确的 JSON",
@@ -178,6 +181,7 @@
     "info": "信息",
     "initials": "简称",
     "joined": "关联",
+    "just-invited": "您刚刚被邀请加入这个看板",
     "keyboard-shortcuts": "快捷键",
     "label-create": "创建新标签",
     "label-default": "%s 标签 (默认)",
@@ -220,6 +224,7 @@
     "none-task-time": "不修改卡片时间",
     "normal": "普通",
     "normal-desc": "可以创建以及编辑卡片，无法更改设置。",
+    "not-accepted-yet": "邀请尚未接受",
     "notify": "通知",
     "optional": "可选",
     "or": "或",
