--- a/i18n/en.i18n.json
+++ b/i18n/en.i18n.json
@@ -1,4 +1,5 @@
 {
+    "accept": "Accept",
     "actions": "Actions",
     "activities": "Activities",
     "activity": "Activity",
@@ -117,6 +118,7 @@
     "createBoardPopup-title": "Create Board",
     "createLabelPopup-title": "Create Label",
     "current": "current",
+    "decline": "Decline",
     "default-avatar": "Default avatar",
     "define-list-status": "Define list status: ",
     "delete": "Delete",
@@ -148,6 +150,7 @@
     "email-sent": "Email sent",
     "email-verifyEmail-subject": "Verify email address on __url__",
     "email-verifyEmail-text": "Hello __user__,\n\nTo verify your account email, simply click the link below.\n\n__url__\n\nThanks.\n",
+    "error-board-doesNotExist": "This board does not exist",
     "error-board-notAdmin": "You need to be admin of this board to do that",
     "error-board-notAMember": "You need to be a member of this board to do that",
     "error-json-malformed": "Your text is not valid JSON",
@@ -183,6 +186,7 @@
     "info": "Infos",
     "initials": "Initials",
     "joined": "joined",
+    "just-invited": "You are just invited to this board",
     "keyboard-shortcuts": "Keyboard shortcuts",
     "label-create": "Create a new label",
     "label-default": "%s label (default)",
@@ -228,7 +232,8 @@
     "none-task-time": "Ingore card time",
     "normal": "Normal",
     "normal-desc": "Can view and edit cards. Can't change settings.",
-    "notify": "通知",
+    "not-accepted-yet": "Invitation not accepted yet",
+    "notify": "Notify",
     "optional": "optional",
     "or": "or",
     "page-maybe-private": "This page may be private. You may be able to view it by <a href='%s'>logging in</a>.",
