--- a/i18n/zh-CN.i18n.json
+++ b/i18n/zh-CN.i18n.json
@@ -162,6 +162,8 @@
     "filter": "过滤",
     "filter-cards": "过滤卡片",
     "filter-clear": "清空过滤器",
+    "filter-creater": "过滤创建者",
+    "filter-members": "过滤成员",
     "filter-on": "过滤器启用中",
     "filter-on-desc": "你正在过滤该看板上的卡片，点此编辑过滤。",
     "filter-to-selection": "要选择的过滤器",
