--- a/i18n/zh-CN.i18n.json
+++ b/i18n/zh-CN.i18n.json
@@ -37,7 +37,7 @@
     "archive-board": "删除看板",
     "archive-card": "删除卡片",
     "archive-list": "删除该清单",
-    "archive-selection": "删除所选内容",
+    "archive-selection": "删除所选部分",
     "archiveBoardPopup-title": "删除看板?",
     "archived-items": "回收箱",
     "archives": "回收箱",
@@ -161,6 +161,7 @@
     "error-user-notCreated": "该用户未能成功创建",
     "export-board": "将看板导出为 JSON",
     "exportAllCardsTsvPopup-title": "将所有卡片导出为 Excel TSV",
+    "exportSelectionTsvPopup-title": "导出为 Excel TSV",
     "filter": "过滤",
     "filter-cards": "过滤卡片",
     "filter-clear": "清空过滤器",
@@ -175,7 +176,7 @@
     "import": "导入",
     "import-board": "从 Trello 导入",
     "import-board-trello-instruction": "在您的 Trello 看板中，点击“菜单”, 然后选择“更多”, “打印与导出”, “导出 JSON”并拷贝结果文本",
-    "import-card-other-board": "从其他看板导入卡片",
+    "import-card-other-board": "导入其他看板的卡片",
     "import-card": "导入 Trello 卡片",
     "import-card-trello-instruction": "进入一个 Trello 卡片，选择“分享与更多”，然后选择 “导出为 JSON” 并且拷贝结果文本",
     "import-json-placeholder": "粘贴您有效的 JSON 数据至此",
@@ -222,7 +223,9 @@
     "memberMenuPopup-title": "成员设置",
     "members": "成员",
     "menu": "菜单",
+    "move-selection": "移动所选部分",
     "moveCardPopup-title": "移动卡片",
+    "moveSelectionPopup-title": "移动所选部分",
     "multi-selection": "多选",
     "multi-selection-on": "多选启用中",
     "my-boards": "我的看板",
