Add QQ notification service, qqbot required

--- a/i18n/en.i18n.json
+++ b/i18n/en.i18n.json
@@ -250,7 +250,9 @@
     "normal": "Normal",
     "normal-desc": "Can view and edit cards. Can't change settings.",
     "not-accepted-yet": "Invitation not accepted yet",
+    "notify-email": "Enable email to receive notifications",
     "notify-participate": "Receive updates to any cards you participate as creater or member",
+    "notify-qq": "Enable QQ to receive notifications",
     "notify-watch": "Receive updates to any boards, lists, or cards you’re watching",
     "optional": "optional",
     "or": "or",
@@ -267,6 +269,7 @@
     "profile": "Profile",
     "public": "Public",
     "public-desc": "This board is public. It's visible to anyone with the link and will show up in search engines like Google. Only people added to the board can edit.",
+    "qq": "QQ",
     "quick-access-description": "Star a board to add a shortcut in this bar.",
     "redmine-csv-headers": "#,Project,Tracker,Parent task,Status,Priority,Subject,Author,Assignee,Updated,Category,Target version,Start date,Due date,Estimated time,Spent time,% Done,Created,Closed,Related issues,Description",
     "remove-cover": "Remove Cover",
