--- a/i18n/zh-CN.i18n.json
+++ b/i18n/zh-CN.i18n.json
@@ -1,5 +1,22 @@
 {
     "accept": "接受",
+    "act-addAttachment": "添加附件 __attachment__ 到 __card__",
+    "act-addComment": "在 __card__ 上留言: __comment__",
+    "act-createBoard": "创建了 __board__",
+    "act-createCard": "把 __card__ 添加到 __list__",
+    "act-createList": "把 __list__ 添加到 __board__",
+    "act-addBoardMember": "把 __member__ 添加到 __board__",
+    "act-archivedBoard": "删除了 __board__",
+    "act-archivedCard": "删除了 __card__",
+    "act-archivedList": "删除了 __list__",
+    "act-importBoard": "导入了 __board__",
+    "act-importCard": "导入了 __card__",
+    "act-importList": "导入了 __list__",
+    "act-joinMember": "分配 __member__ 到 __card__",
+    "act-moveCard": "把 __card__ 从 __oldList__ 移动到 __list__",
+    "act-removeBoardMember": "从 __board__ 移除了 __member__",
+    "act-restoredCard": "将 __card__ 还原到 __board__",
+    "act-unjoinMember": "将 __member__ 从 __card__ 移除",
     "actions": "操作",
     "activities": "活动",
     "activity": "活动",
@@ -233,7 +250,9 @@
     "normal": "普通",
     "normal-desc": "可以创建以及编辑卡片，无法更改设置。",
     "not-accepted-yet": "邀请尚未接受",
+    "notify-email": "启用 Email 来接收通知消息",
     "notify-participate": "您作为创建人、成员的卡片发生变更时，给您推送通知",
+    "notify-qq": "启用 QQ 来接收通知消息",
     "notify-watch": "您关注的看板、清单或者卡片发生变更时，给您推送通知",
     "optional": "可选",
     "or": "或",
@@ -250,6 +269,7 @@
     "profile": "资料",
     "public": "公开",
     "public-desc": "该看板将被设为公开。任何人均可通过链接查看，并且将对Google和其他搜索引擎开放。只有添加至该看板的成员才可进行编辑。",
+    "qq": "QQ",
     "quick-access-description": "星标看板在导航条中添加快捷方式",
     "redmine-csv-headers": "#,项目,跟踪,父任务,状态,优先级,主题,作者,指派给,更新于,类别,目标版本,开始日期,计划完成日期,预期时间,耗时,% 完成,创建于,结束日期,相关的问题,描述",
     "remove-cover": "移除封面",
